Resolved issue where tagline thumbnail was visible on small and medium viewports

--- a/css/custom.css
+++ b/css/custom.css
@@ -7,18 +7,8 @@
   background-color: white;
 }
 
-.header-tagline {
-  height: auto;
-}
-
-.tagline-background {
-  box-sizing: border-box;
-  background-color: white;
-}
-
 .tagline {
   color: rgb(24,19,9);
-
 }
 
 .navbar-inverse .navbar-brand {
